# gscholar-search

./: .gitignore  README.md  setup.cfg  setup.py
gscholar_search/: Sehanobish Corzo Kara--Apr-27-2022  Sehanobish Corzo Kara.csv  Testing.ipynb  gssearch.py
notebooks/: Sehanobish Corzo Kara--May-05-2022  gscholar-search.ipynb
src/: gscholar_search.py
tests/: test_gssearch.py
