[metadata]
name = gscholar_search
version = 0.1
author = Onur Kara
description = Google scholar search and parser
long_description = none
url = https://github.com/okara83/gscholar-search
keywords = google, scholar, search
[files]
packages =
    setup
    setup.cfg
    setup.cfg.extern
[options]
python_requires = >=3.7, <4
install_requires =
    pandas
    bs4
[options.extras_require]
test =
    pytest
